# backend_v2/swagger.yaml
@@ -4,7 +4,7 @@ info:
   version: '1.0'
   description: "This is a simple CRUD API application made with Express and documented with Swagger 
   <br><br><h1>AUTH PASS (🔑): admin
-  <br><br><h1>SUPER-AUTH PASS (🔑🦹‍♂️): superadmin"
+  <br><br><h1>SUPER-AUTH PASS (🔑🦹‍♂️): superadmin for System API calls and Librarian registeration."
 servers:
   - url: http://localhost:8080/
   
@@ -63,8 +63,8 @@ paths:
 
   /system/inserttuples:
     post:
-
-      
+      security:
+        - Super-Authorization: []
       tags:
         - "System"
 
@@ -77,6 +77,8 @@ paths:
 
   /system/truncatetables:
     delete:
+      security:
+        - Super-Authorization: []
       tags:
         - "System"
 
@@ -89,6 +91,8 @@ paths:
 
   /system/inserttables:
     post:
+      security:
+        - Super-Authorization: []
       tags:
         - "System"
 
@@ -249,6 +253,95 @@ paths:
         '401':
           description: Unauthorized - Token is expired or wrong.
 
+  /forum/likepost:
+    put:
+      tags:
+        - "Forum"
+
+      description: User likes the post.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                  uid:
+                    type: integer
+                    format: user_id
+                    example: 2
+                  pid:
+                    type: integer
+                    format: post_id
+                    example: 6
+      responses:
+        '200':
+          description: OK - Successfully liked.
+        '401':
+          description: Unauthorized - Wrong username or email.
+
+  /forum/updatepost:
+    put:
+      tags:
+        - "Forum"
+
+      description: Updates the post.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                  uid:
+                    type: integer
+                    format: user_id
+                    example: 2
+                  pid:
+                    type: integer
+                    format: post_id
+                    example: 6
+                  title:
+                    type: string
+                    format: Title of Post
+                    example: "This Book sucks"
+                  context:
+                    type: integer
+                    format: context
+                    example: "Context"
+      responses:
+        '200':
+          description: OK - Successfully updated the post.
+        '401':
+          description: Unauthorized - Wrong username or email.
+
+
+  /forum/deletepost:
+    delete:
+      tags:
+        - "Forum"
+
+      description: Deletes the post from forum.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                  uid:
+                    type: integer
+                    format: User ID
+                    example: 2
+                  pid:
+                    type: integer
+                    format: Post ID
+                    example: 4
+      responses:
+        '200':
+          description: OK - Successfully unfollowed a thread.
+        '401':
+          description: Unauthorized - Token is expired or wrong.
 
   /forum/postpost:
     post:
